# local-api-for-anki

./: .gitignore  LICENSE  README.md  compose.yml  prometheus.yml  pyproject.toml
addon/: localapi.py
app/: main.py
app/api/: router.py
app/api/endpoints/: fastwq.py  ipa.py  yomitan.py
app/core/: config.py
app/data/: en_US.txt
app/schemas/: fastwq.py  ipa.py  yomitan.py
app/services/: cefr.py  freq.py  ipa.py  nlp.py  text.py
scripts/: export-db.py  init_db.py
src/morph_api/: __init__.py
tests/: test_api.py
tests/api/: test_fastwq.py  test_ipa.py  test_yomitan.py
tests/services/: test_ipa.py  test_text.py
