[project]
name = "morph-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mootah", email = "44580337+mootah@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "beautifulsoup4>=4.14.3",
    "cefrpy>=1.0.1",
    "fastapi>=0.133.1",
    "pip>=26.0.1",
    "prometheus-client>=0.24.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pyyaml>=6.0.3",
    "spacy>=3.8.11",
    "uvicorn>=0.41.0",
    "wordfreq>=3.1.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",
    "taskipy>=1.14.1",
]

[tool.taskipy.settings]
use_vars = true

[tool.taskipy.variables]
host = "127.0.0.1"
port = "19634"

[tool.taskipy.tasks]
dev = "uvicorn app.main:app --host {host} --port {port} --reload --log-level debug"
server = "uvicorn app.main:app --host {host} --port {port} --workers 4 --log-level info --no-access-log"
test = "pytest tests/"
init-db = "python scripts/init_db.py"
export-db = "python scripts/export-db.py"
